apps/ordering/manifest/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ordering
  name: ordering
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ordering
  template:
    metadata:
      labels:
        io.kompose.service: ordering
    spec:
      containers:
        - image: ghcr.io/startupnationlabs/spos/ordering:sha-bcc8181
          name: ordering
          ports:
            - containerPort: 3003
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
