apps/ordering/manifest/base/service.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ordering
  name: ordering
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    io.kompose.service: ordering
