apps/ordering/manifest/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ordering
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: ordering.spos.polytech.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  ordering
                port:
                  number: 3003
  tls:
    - hosts:
        - ordering.spos.polytech.apoorva64.com
      secretName: ordering.spos.polytech.apoorva64-tls
